--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -32,6 +32,8 @@ services:
           "ui": true
         }
     command: server
+    networks:
+      - model-network
     volumes:
       - vault-file:/vault/file
     healthcheck:
@@ -63,23 +65,10 @@ services:
     environment:
       TZ: America/Sao_Paulo
       VAULT_ADDR: http://vault:8200
-      VAULT_TOKEN: ${VAULT_TOKEN}
-
+      ROOT_TOKEN: ${ROOT_TOKEN}
       GEMINI_API_KEY: ${GEMINI_API_KEY}
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      NAME_ADMIN: ${NAME_ADMIN}
-      PASSWORD_ADMIN: ${PASSWORD_ADMIN}
-      JWT_SECRET: ${JWT_SECRET}
-      JWT_EXPIRATION: ${JWT_EXPIRATION}
     ports:
       - "8080:8080"
     networks:
       - model-network
-    command: >
-      sh -c "apk add --no-cache curl jq &&
-      echo 'Tentando buscar secret no Vault...' &&
-      curl -s --header 'X-Vault-Token: $VAULT_TOKEN' $VAULT_ADDR/v1/secret/data/meu-segredo |
-      jq '.data.data'"
     restart: always
